; ModuleID = '/home/carl/AnghaBench/linux/fs/ext4/extr_extents.c_ext4_zeroout_es.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ext4/extr_extents.c_ext4_zeroout_es.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.ext4_extent = type { i32 }

@EXTENT_STATUS_WRITTEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.ext4_extent*)* @ext4_zeroout_es to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext4_zeroout_es(%struct.inode* %0, %struct.ext4_extent* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.ext4_extent*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.ext4_extent* %1, %struct.ext4_extent** %5, align 8
  %9 = load %struct.ext4_extent*, %struct.ext4_extent** %5, align 8
  %10 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @le32_to_cpu(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load %struct.ext4_extent*, %struct.ext4_extent** %5, align 8
  %14 = call i32 @ext4_ext_get_actual_len(%struct.ext4_extent* %13)
  store i32 %14, i32* %8, align 4
  %15 = load %struct.ext4_extent*, %struct.ext4_extent** %5, align 8
  %16 = call i32 @ext4_ext_pblock(%struct.ext4_extent* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.inode*, %struct.inode** %4, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @EXTENT_STATUS_WRITTEN, align 4
  %26 = call i32 @ext4_es_insert_extent(%struct.inode* %21, i32 %22, i32 %23, i32 %24, i32 %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %20, %19
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @ext4_ext_get_actual_len(%struct.ext4_extent*) #1

declare dso_local i32 @ext4_ext_pblock(%struct.ext4_extent*) #1

declare dso_local i32 @ext4_es_insert_extent(%struct.inode*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
